# SmashOrPass

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bootstrap_build_linux.sh  bootstrap_build_windows.bat  clean_rebuild_linux.sh  clean_rebuild_windows.bat  game_specification.md  imgui.ini  vcpkg.json
.github/workflows/: ci.yml
assets/sprites/arenas/: chains.json
assets/sprites/characters/robot/: Ascending.json  Attacks.json  Dash.json  Falling.json  Idle.json  Jump.json  Walk.json
assets/sprites/characters/samurai/: Ascending.json  Attacks.json  Dash.json  Falling.json  Idle.json  Walk.json
cmake/: PreventInSourceBuilds.cmake
include/smashorpass/app/: Application.hpp
include/smashorpass/asset/: ArenaMetadata.hpp  AssetManager.hpp  SpriteSheet.hpp
include/smashorpass/core/: ApplicationContext.hpp  ApplicationState.hpp  Arena.hpp  Base.hpp  DisplayMetrics.hpp  Event.hpp  FixedStepScheduler.hpp  Game.hpp  GameState.hpp  InputBindings.hpp  PlayerController.hpp  PlayerSpritePlacement.hpp  SpriteAnimationPlayer.hpp
include/smashorpass/debug/: DebugOverlay.hpp
include/smashorpass/layer/: DebugLayer.hpp  GameLayer.cpp  GameLayer.hpp  Layer.hpp  UILayer.cpp  UILayer.hpp
include/smashorpass/platform/: Window.hpp
include/smashorpass/rendering/: ParticleSystem.hpp  RenderContext.hpp  Renderer.hpp
include/smashorpass/ui/: CharacterSelectScreen.hpp  GameScreen.cpp  GameScreen.hpp  MenuScreen.hpp  PauseScreen.hpp  Theme.hpp  UIBuilder.hpp  UIScreen.hpp  UIWidget.hpp
src/: EntryPoint.cpp
src/app/: Application.cpp
src/asset/: ArenaMetadata.cpp  AssetManager.cpp  SpriteSheet.cpp
src/core/: FixedStepScheduler.cpp  Game.cpp  PlayerController.cpp  PlayerSpritePlacement.cpp  PlayerSpritePlacement.hpp
src/debug/: DebugOverlay.cpp
src/layer/: DebugLayer.cpp  GameLayer.cpp  UILayer.cpp
src/platform/: Window.cpp
src/rendering/: ParticleSystem.cpp  Renderer.cpp
src/ui/: CharacterSelectScreen.cpp  GameScreen.cpp  MenuScreen.cpp  PauseScreen.cpp  UIBuilder.cpp  UIScreen.cpp
tests/: AssetManagerTests.cpp  FixedStepSchedulerTests.cpp  GameConfigTests.cpp  PlayerControllerTests.cpp  PlayerSpritePlacementTests.cpp  SpriteAnimationPlayerTests.cpp  SpriteSheetTests.cpp
tools/: format.sh
tools/assets/: SpriteSheetCreation.txt
